[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://FileDialog.gd" type="Script" id=2]
[ext_resource path="res://Control.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Ability_Tree" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Connections" type="Node2D" parent="Ability_Tree"]
unique_name_in_owner = true
position = Vector2( 0, -169 )

[node name="ScrollContainer" type="ScrollContainer" parent="Ability_Tree"]
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="Ability_Tree/ScrollContainer"]
unique_name_in_owner = true
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 26

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 196.0

[node name="MenuButton" type="Button" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 94.0
margin_bottom = 93.0
icon = ExtResource( 1 )
icon_align = 1
expand_icon = true

[node name="FileDialog" type="FileDialog" parent="MenuButton"]
margin_left = 254.0
margin_top = 178.0
margin_right = 882.0
margin_bottom = 522.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
dialog_hide_on_ok = true
dialog_autowrap = true
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
show_hidden_files = true
script = ExtResource( 2 )

[connection signal="pressed" from="MenuButton" to="MenuButton/FileDialog" method="_on_MenuButton_pressed"]
[connection signal="file_selected" from="MenuButton/FileDialog" to="MenuButton/FileDialog" method="_on_FileDialog_file_selected"]
[connection signal="json_Parsed" from="MenuButton/FileDialog" to="." method="_on_FileDialog_json_Parsed"]
